--- a/crm/web/WEB-INF/web.xml
+++ b/crm/web/WEB-INF/web.xml
@@ -4,48 +4,16 @@
            xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
 		  http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
            version="3.0">
-    <!--管理员模块-->
-    <servlet>
-        <servlet-name>AdminAction</servlet-name>
-        <servlet-class>me.wener.lesson.practice.crm.sys.admin.web.servlet.AdminActionServlet</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>AdminAction</servlet-name>
-        <url-pattern>/AdminAction</url-pattern>
-    </servlet-mapping>
-    <!--部门模块-->
-    <servlet>
-        <servlet-name>GroupAction</servlet-name>
-        <servlet-class>me.wener.lesson.practice.crm.sys.group.web.servlet.GroupActionServlet</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>GroupAction</servlet-name>
-        <url-pattern>/GroupAction</url-pattern>
-    </servlet-mapping>
-    <!--人事模块-->
-    <servlet>
-        <servlet-name>UserAction</servlet-name>
-        <servlet-class>me.wener.lesson.practice.crm.sys.user.web.servlet.UserActionServlet</servlet-class>
-    </servlet>
-    <servlet>
-        <servlet-name>ListDominateServlet</servlet-name>
-        <servlet-class>me.wener.lesson.practice.crm.sys.common.web.servlet.ListDominateServlet</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>UserAction</servlet-name>
-        <url-pattern>/UserAction</url-pattern>
-    </servlet-mapping>
 
-
-    <!--编码处理-->
+    <!--配置 structs 的核心过滤器-->
     <filter>
-        <filter-name>GetPostEncodingFilter</filter-name>
-        <filter-class>me.wener.lesson.practice.crm.sys.common.web.filter.GetPostEncodingFilter</filter-class>
+        <filter-name>StrutsPrepareAndExecuteFilter</filter-name>
+        <filter-class>org.apache.struts2.dispatcher.ng.filter.StrutsPrepareAndExecuteFilter</filter-class>
     </filter>
+
     <filter-mapping>
-        <filter-name>GetPostEncodingFilter</filter-name>
+        <filter-name>StrutsPrepareAndExecuteFilter</filter-name>
         <url-pattern>/*</url-pattern>
-        <dispatcher>REQUEST</dispatcher>
     </filter-mapping>
 
 
