after a crush refactor. change user to item.

--- a/crm/src/resources/struts.properties
+++ b/crm/src/resources/struts.properties
@@ -7,3 +7,10 @@
 ### This can be used to set your default locale and encoding scheme
 # struts.locale=en_US
 struts.i18n.encoding=UTF-8
+
+### Load custom default resource bundles
+# struts.custom.i18n.resources=testmessages,testmessages2
+struts.custom.i18n.resources=globalmessages
+
+### 只允许无扩展名的
+struts.action.extension=,
