--- a/crm/doc/struts.properties
+++ b/crm/doc/struts.properties
@@ -116,7 +116,7 @@ struts.custom.i18n.resources=globalmessages
 struts.dispatcher.parametersWorkaround = false
 
 ### configure the Freemarker Manager class to be used
-### Allows user to plug-in customised Freemarker Manager if necessary
+### Allows item to plug-in customised Freemarker Manager if necessary
 ### MUST extends off org.apache.struts2.views.freemarker.FreemarkerManager
 #struts.freemarker.manager.classname=org.apache.struts2.views.freemarker.FreemarkerManager
 
