--- a/crm/src/resources/log4j.properties
+++ b/crm/src/resources/log4j.properties
@@ -14,6 +14,8 @@ log4j.appender.stdout.layout = org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern = %d{ISO8601} %-5p [%F:%L] : %m%n
 
 
+# =========================== ORMLite
+
 # be more verbose with our code
 log4j.logger.com.j256.ormlite=DEBUG
 
@@ -22,3 +24,5 @@ log4j.logger.com.j256.ormlite=DEBUG
 #log4j.logger.com.j256.ormlite.stmt.mapped.BaseMappedStatement=TRACE
 #log4j.logger.com.j256.ormlite.stmt.mapped.MappedCreate=TRACE
 #log4j.logger.com.j256.ormlite.stmt.StatementExecutor=TRACE
+
+# =========================== /ORMLite
