--- a/jk/pom.xml
+++ b/jk/pom.xml
@@ -87,6 +87,11 @@
 
         <dependency>
             <groupId>org.springframework</groupId>
+            <artifactId>spring-aspects</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
             <artifactId>spring-orm</artifactId>
             <version>${spring.version}</version>
         </dependency>
@@ -95,13 +100,21 @@
             <artifactId>javax.inject</artifactId>
             <version>1</version>
         </dependency>
-
+        <!--servlet 相关的-->
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
             <version>${servlet-api.version}</version>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.2</version>
+            <!--<scope>provided</scope>-->
+        </dependency>
+
         <!--mybatis-->
         <dependency>
             <groupId>org.mybatis</groupId>
